# gold_ai_system

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: setup_ja.md  system_structure_ja.md
scripts/: run_cli_cmd_template.bat  run_cli_powershell_template.bat  run_cli_unix_template.sh
src/gold_ai_system/: __init__.py  cli.py  config.py
